--- a/SDL_JoystickName.mediawiki
+++ b/SDL_JoystickName.mediawiki
@@ -14,14 +14,14 @@ const char* SDL_JoystickName(SDL_Joystick *joystick)
 == Function Parameters ==
 {|
 |'''joystick'''
-|^the [[SDL_Joystick]] obtained from [[SDL_JoystickOpen]] 
+|the [[SDL_Joystick]] obtained from [[SDL_JoystickOpen]] 
 |}
 
 == Return Value ==
 Returns the name of the selected joystick.  If no name can be found, this function returns NULL; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
-*
+
 ```c++
 /* Print the names of all attached joysticks */
 int num_joy, i;
@@ -33,13 +33,12 @@ for(i = 0; i < num_joy; i++)
   printf("%s\n", SDL_JoystickName(joystick));
 }
 ```
-*
 
 == Remarks ==
 
 == Related Functions ==
-:[[SDL_JoystickOpen]] *
-:[[SDL_JoystickNameForIndex]] *
+:[[SDL_JoystickOpen]]
+:[[SDL_JoystickNameForIndex]]
 
 ----
 [[CategoryAPI]], [[CategoryJoystick]]
