--- a/CategoryRender.mediawiki
+++ b/CategoryRender.mediawiki
@@ -20,11 +20,9 @@ This API supports the following features:
 
 All of these may be drawn in opaque, blended, or additive modes.
 
-The texture images can have an additional color tint or alpha modulation applied to them, and may also be stretched with linear interpolation.
+The texture images can have an additional color tint or alpha modulation applied to them, and may also be stretched with linear interpolation, rotated or flipped/mirrored.
 
-This API is designed to accelerate simple 2D operations. You may want more functionality such as rotation and particle effects and in that case you should use SDL's OpenGL/Direct3D support or one of the many good 3D engines.
-
-
+For advanced functionality like particle effects or actual 3d you should use SDL's OpenGL/Direct3D support or one of the many good 3D engines.
 
 == Enumerations ==
 <<FullSearchCached(category:CategoryEnum CategoryRender -SGEnumerations)>>
