--- a/SDL_RenderCopy.mediawiki
+++ b/SDL_RenderCopy.mediawiki
@@ -44,22 +44,15 @@ int main()
   SDL_Texture* Background_Tx;
   SDL_Texture* BlueShapes;
 
-
-/*For loop counters*/
-  int i;
-  int n;
-
-
-/*Rects for drawing. Probably overkill, but defining too much is certainly better than errors from uninitilization*/
+  /* Rectangles for drawing which will specify source (inside the texture)
+  and target (on the screen) for rendering our textures. */
   SDL_Rect SrcR;
   SDL_Rect DestR;
-
 
   SrcR.x = 0;
   SrcR.y = 0;
   SrcR.w = SHAPE_SIZE;
   SrcR.h = SHAPE_SIZE;
-
 
   DestR.x = 640 / 2 - SHAPE_SIZE / 2;
   DestR.y = 580 / 2 - SHAPE_SIZE / 2;
@@ -67,26 +60,28 @@ int main()
   DestR.h = SHAPE_SIZE;
 
 
-/*The creation of all the necessary stuff*/
-  Main_Window = SDL_CreateWindow("SDL_RenderCopy Example", SDL_WINDOWPOS_UNDEFINED, SDL_WINDOWPOS_UNDEFINED, 640, 580, SDL_WINDOW_SHOWN);
+  /* Before we can render anything, we need a window and a renderer */
+  Main_Window = SDL_CreateWindow("SDL_RenderCopy Example",
+  SDL_WINDOWPOS_UNDEFINED, SDL_WINDOWPOS_UNDEFINED, 640, 580, SDL_WINDOW_SHOWN);
   Main_Renderer = SDL_CreateRenderer(Main_Window, -1, SDL_RENDERER_ACCELERATED);
 
-
-/*The loading of the background texture. I think using CreateTextureFromSurface
-is the best way to do this without using SDL_image. My background of choice is a calming field picture*/
+  /* The loading of the background texture. Since SDL_LoadBMP returns
+  a surface, we convert it to a texture afterwards for fast accelerated
+  blitting. */
   Loading_Surf = SDL_LoadBMP("Background.bmp");
   Background_Tx = SDL_CreateTextureFromSurface(Main_Renderer, Loading_Surf);
+  SDL_FreeSurface(Loading_Surf);  // we got the texture now -> free surface
 
-
-/*Clear the loading surface, load a new one, and creating the second texture.
-This one has a 2x2 grid of blue shapes on a black background.*/
-  Loading_Surf = NULL;
+  /* Load an additional texture */
   Loading_Surf = SDL_LoadBMP("Blueshapes.bmp");
   BlueShapes = SDL_CreateTextureFromSurface(Main_Renderer, Loading_Surf);
-  SDL_FreeSurface(Loading_Surf); //always good to free stuff as soon as you're done with it
+  SDL_FreeSurface(Loading_Surf);
 
-
-/*now onto the fun part. This will render a rotating selection of the blue shapes in the middle of the screen*/
+  /* now onto the fun part.
+  This will render a rotating selection of the blue shapes
+  in the middle of the screen */
+  int i;
+  int n;
   for(i=0;i<2;i++)
   {
     for(n=0;n<4;n++)
@@ -100,16 +95,31 @@ This one has a 2x2 grid of blue shapes on a black background.*/
       {
         SrcR.y = 0;
       }
-      SDL_RenderCopy (Main_Renderer,Background_Tx,NULL,NULL);
-      SDL_RenderCopy (Main_Renderer,BlueShapes,&SrcR,&DestR);
+
+      /* render background, whereas NULL for source and destination
+      rectangles just means "use the default" */
+      SDL_RenderCopy(Main_Renderer, Background_Tx, NULL, NULL);
+
+      /* render the current animation step of our shape */
+      SDL_RenderCopy(Main_Renderer, BlueShapes, &SrcR, &DestR);  
       SDL_RenderPresent(Main_Renderer);
       SDL_Delay(500);
     }
   }
 
 
-/* in my mind, I think of the renderer as a big canvis, and when you RenderCopy you are adding paint on it, each time adding it over top. You can change how it blends with the stuff that the new data goes over. If you're stuck on the whole renderer idea, coming from 1.2 surfaces and bliting, think of the renderer as your main surface, and RenderCopy as the blit function to that main surface, with RenderPresent as the old flip function.*/
+  /* The renderer works pretty much like a big canvas:
+  when you RenderCopy you are adding paint, each time adding it
+  on top.
+  You can change how it blends with the stuff that
+  the new data goes over.
+  When your 'picture' is complete, you show it
+  by using SDL_RenderPresent. */
 
+  /* SDL 1.2 hint: If you're stuck on the whole renderer idea coming
+  from 1.2 surfaces and blitting, think of the renderer as your
+  main surface, and SDL_RenderCopy as the blit function to that main
+  surface, with SDL_RenderPresent as the old SDL_Flip function.*/
 
   SDL_DestroyTexture(BlueShapes);
   SDL_DestroyTexture(Background_Tx);
