--- a/SDL_GameControllerNameForIndex.mediawiki
+++ b/SDL_GameControllerNameForIndex.mediawiki
@@ -47,6 +47,7 @@ joystick_index is the same as the device_index passed to [[SDL_JoystickOpen]].
 == Related Functions ==
 :[[SDL_IsGameController]]
 :[[SDL_GameControllerOpen]]
+:[[SDL_GameControllerName]]
 
 ----
 [[CategoryAPI]], [[CategoryGameController]]
