--- a/CategoryGameController.mediawiki
+++ b/CategoryGameController.mediawiki
@@ -20,15 +20,15 @@ This category contains functions for handling gamecontrollers and for mapping jo
 
 
 == Enumerations ==
-<<FullSearchCached(category:CategoryGameController CategoryEnum -SGEnumerations)>>
+<<FullSearch(category:CategoryGameController CategoryEnum -SGEnumerations)>>
 
 
 == Structures ==
-<<FullSearchCached(category:CategoryGameController CategoryStruct -SGStructures)>>
+<<FullSearch(category:CategoryGameController CategoryStruct -SGStructures)>>
 
 
 == Functions ==
-<<FullSearchCached(category:CategoryGameController -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearch(category:CategoryGameController -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
