--- a/CategoryGameController.mediawiki
+++ b/CategoryGameController.mediawiki
@@ -16,19 +16,19 @@
 
 == Introduction ==
 
-This category contains functions for handling gamecontrollers and for mapping joysticks to gamecontroller semantics.
+This category contains functions for handling game controllers and for mapping joysticks to game controller semantics.
 
 
 == Enumerations ==
-<<FullSearch(category:CategoryGameController CategoryEnum -SGEnumerations)>>
+<<FullSearchCached(category:CategoryGameController CategoryEnum -SGEnumerations)>>
 
 
 == Structures ==
-<<FullSearch(category:CategoryGameController CategoryStruct -SGStructures)>>
+<<FullSearchCached(category:CategoryGameController CategoryStruct -SGStructures)>>
 
 
 == Functions ==
-<<FullSearch(category:CategoryGameController -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearch(category:CategoryGameController -CategoryEnum -CategoryStruct)>>
 
 ----
 CategoryCategory
