--- a/CategoryBits.mediawiki
+++ b/CategoryBits.mediawiki
@@ -20,20 +20,8 @@
 This category contains functions for bit-level operations ("bit-twiddling").
 
 
-
-<!-- #If this category includes enumerations change CategoryHeader below to the appropriate category name that will be used in the footer of the corresponding API pages.  See the Footer section of the Enumerations Style Guide for details.  Remove the ## in front of the next 2 lines to automatically create a list on the page.  Remove this comment. -->
-<!-- #== Enumerations == -->
-<!-- #<<FullSearchCached(category:CategoryBits CategoryEnum -SGEnumerations)>> -->
-
-
-<!-- #If this category includes structures change CategoryHeader below to the appropriate category name that will be used in the footer of the corresponding API pages.  See the Footer section of the Structures Style Guide for details.  Remove the ## in front of the next 2 lines to automatically create a list on the page.  Remove this comment. -->
-<!-- #== Structures == -->
-<!-- #<<FullSearchCached(category:CategoryBits CategoryStruct -SGStructures)>> -->
-
-
-<!-- #If this category includes functions change CategoryHeader below to the appropriate category name that will be used in the footer of the corresponding API pages.  See the Footer section of the Functions Style Guide for details.  Remove the ## in front of the next 2 lines to automatically create a list on the page.  Remove this comment. -->
 == Functions ==
-<<FullSearch(category:CategoryBits -CategoryEnum -CategoryStruct)>>
+<<FullSearchCached(category:CategoryBits -CategoryEnum -CategoryStruct)>>
 
 ----
 CategoryCategory
