--- a/FAQLinux.mediawiki
+++ b/FAQLinux.mediawiki
@@ -127,6 +127,25 @@ Note the different entries for 8 & 16 bit screendepth. I.e. the 320x240 resoluti
 To test these entries, restart X after you modified XF86Config and press ctrl-alt-plus and ctrl-alt-minus to cycle through the resolutions.
 -- contributed by Andreas Umbach
 
+== How do I get all the dependencies for building SDL on Fedora? ==
+
+You can install these packages for building SDL 2.0 on Fedora:
+rpm-build
+alsa-lib-devel
+libX11-devel
+libXScrnSaver-devel
+libXau-devel
+libXcursor-devel
+libXext-devel
+libXfixes-devel
+libXi-devel
+libXinerama-devel
+libXrandr-devel
+libXrender-devel
+libXxf86vm-devel
+mesa-libGL-devel
+pulseaudio-libs-devel
+
 == How do I get all the dependencies for building SDL on Ubuntu? ==
 Run the following command: sudo apt-get build-dep libsdl1.2
 
