--- a/SDL_GameControllerGetAttached.mediawiki
+++ b/SDL_GameControllerGetAttached.mediawiki
@@ -35,4 +35,4 @@ You can add your code example here
 :[[SDL_GameControllerClose]]
 
 ----
-[[CategoryAPI]], CategoryGameController
+[[CategoryAPI]], [[CategoryGameController]]
