--- a/SDL_TouchFingerEvent.mediawiki
+++ b/SDL_TouchFingerEvent.mediawiki
@@ -14,7 +14,7 @@ A structure that contains finger touch event information.
 |-
 |Uint32
 |'''windowID'''
-|the window with mouse focus, if any.  ''this field may no longer exist''
+|the window with mouse focus, if any.  ,,''this field may no longer exist'',,
 |-
 |Uint32
 |'''timestamp'''
@@ -30,7 +30,7 @@ A structure that contains finger touch event information.
 |-
 |Uint8
 |'''state'''
-|the current button state.  ''this field may no longer exist''
+|the current button state.  ,,''this field may no longer exist'',,
 |-
 |float
 |'''x'''
