--- a/SDL_CreateThread.mediawiki
+++ b/SDL_CreateThread.mediawiki
@@ -1,7 +1,7 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
 {|
-|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
+|<tablewidth="100%"style="color:rgb(255, 0, 0);text-align:center;">DRAFT 
 |}
 
 
@@ -18,13 +18,13 @@ SDL_Thread* SDL_CreateThread(SDL_ThreadFunction fn,
 == Function Parameters ==
 {|
 |'''fn''' 
-|the function to call in the new thread; see [[#Remarks|Remarks]] for details
+|the function to call in the new thread; see [[#Remarks|Remarks]] for details 
 |-
-|'''name'''
-|the name of the thread; see [[#name|Remarks]] for details
+|'''name''' 
+|the name of the thread; see [[#name|Remarks]] for details 
 |-
 |'''data''' 
-|a pointer that is passed to '''fn'''
+|a pointer that is passed to '''fn''' 
 |}
 
 
@@ -90,28 +90,30 @@ Thread counter: 8
 Thread counter: 9
 Thread returned value:10
 ```
-
-
 == Remarks ==
-*<br/>[[SDL_CreateThread]]() creates a new thread of execution that shares all of its parent's global memory, signal handlers, file descriptors, etc, and runs the function '''fn''', passing it the void pointer '''data'''.  The thread quits when '''fn''' returns. <br/>*
+[[SDL_CreateThread]]() creates a new thread of execution that shares all of its parent's global memory, signal handlers, file descriptors, etc, and runs the function '''fn''', passing it the void pointer '''data'''.  The thread quits when '''fn''' returns.
 
 The function prototype for '''fn''' is:
+
  ```
 int SDL_ThreadFunction(void* data)
 ```
 : where its parameter is:
- ||<code>data</code>||what was passed as '''data''' to [[SDL_CreateThread]]()||
+ ||<code>data</code> ||what was passed as '''data''' to [[SDL_CreateThread]]() ||
 
-Always use the caller's <code>_beginthread()</code> and <code>_endthread()</code> APIs to start a new thread. This way, if it's the SDL.DLL which uses this API, then the RTL of SDL.DLL will be used to create the new thread, and if it's the application, then the RTL of the application will be used.  
-<!-- This information is also listed on the main Category page in more detail but it seems relevant to list at least some of it here as well.  Should the header be referenced as a link for more information? -->
+
+
+== Implementation Notes ==
+Always use the caller's <code>_beginthread()</code> and <code>_endthread()</code> APIs to start a new thread. This way, if it's the SDL.DLL which uses this API, then the RTL of SDL.DLL will be used to create the new thread, and if it's the application, then the RTL of the application will be used.   <!-- This information is also listed on the main Category page in more detail but it seems relevant to list at least some of it here as well.  Should the header be referenced as a link for more information? -->
 
 <!-- Is the int that is returned equivalent to the thread ID or is it just an integer to indicate success or failure?  Should it be further defined here? -->
 
-<span id="name"></span>
-Thread naming is a little complicated: Most systems have very small limits for the string length (BeOS has 32 bytes, Linux currently has 16, Visual C++ 6.0 has nine!), and possibly other arbitrary rules. You'll have to see what happens with your system's debugger. The name should be UTF-8 (but using the naming limits of C identifiers is a better bet).  
+<span id="name"></span> Thread naming is a little complicated: Most systems have very small limits for the string length (BeOS has 32 bytes, Linux currently has 16, Visual C++ 6.0 has nine!), and possibly other arbitrary rules. You'll have to see what happens with your system's debugger. The name should be UTF-8 (but using the naming limits of C identifiers is a better bet).
 
 There are no requirements for thread naming conventions, so long as the string is null-terminated UTF-8, but these guidelines are helpful in choosing a name:
+
 : http://stackoverflow.com/questions/149932/naming-conventions-for-threads
+
 If a system imposes requirements, SDL will try to munge the string for it (truncate, etc), but the original string contents will be available from [[SDL_GetThreadName]]().
 
 ```#!wiki comment
@@ -123,12 +125,12 @@ If a system imposes requirements, SDL will try to munge the string for it (trunc
 
 <<Color2(green,Is there a way to kill/destroy/end/close a thread?  Should it be listed here if there is?)>>
 ```
-
 == Related Functions ==
 : [[SDL_GetThreadID]] ???
 : [[SDL_GetThreadName]]
 : [[SDL_ThreadID]] ???
+
 <!-- . [[SDL_WaitThread]] ??? -->
 
 ----
-[[CategoryAPI]], [[CategoryThread]]
+[[CategoryAPI]], !CategoryThread
