--- a/SDL_SetWindowFullscreen.mediawiki
+++ b/SDL_SetWindowFullscreen.mediawiki
@@ -8,7 +8,7 @@ Use this function to set a window's fullscreen state.
 == Syntax ==
 ```c++
 int SDL_SetWindowFullscreen(SDL_Window* window,
-                            SDL_bool    fullscreen)
+                            Uint32 flags)
 ```
 
 == Function Parameters ==
@@ -16,8 +16,8 @@ int SDL_SetWindowFullscreen(SDL_Window* window,
 |'''window'''
 |the window to change
 |-
-|'''fullscreen'''
-|SDL_TRUE for fullscreen or SDL_FALSE for windowed
+|'''flags'''
+|SDL_WINDOW_FULLSCREEN, SDL_WINDOW_FULLSCREEN_DESKTOP or 0; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
@@ -29,7 +29,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+'''flags''' may be SDL_WINDOW_FULLSCREEN, for "real" fullscreen with a videomode change; SDL_WINDOW_FULLSCREEN_DESKTOP for "fake" fullscreen that takes the size of the desktop; and 0 for windowed mode.
 
 == Related Functions ==
 :[[SDL_GetWindowDisplayMode]]
