--- a/SDL_MouseMotionEvent.mediawiki
+++ b/SDL_MouseMotionEvent.mediawiki
@@ -19,23 +19,23 @@ A structure that contains mouse motion event information.
 |'''which'''
 |the mouse instance id, or SDL_TOUCH_MOUSEID; see [[#Remarks|Remarks]] for details
 |-
-|Uint8
+|Uint32
 |'''state'''
 |the state of the button; see [[#Remarks|Remarks]] for details
 |-
-|int
+|Sint32
 |'''x'''
 |X coordinate, relative to window
 |-
-|int
+|Sint32
 |'''y'''
 |Y coordinate, relative to window
 |-
-|int
+|Sint32
 |'''xrel'''
 |relative motion in the X direction
 |-
-|int
+|Sint32
 |'''yrel'''
 |relative motion in the Y direction
 |}
@@ -51,7 +51,7 @@ You can add your code example here
 
 An SDL_MOUSEMOTION event occurs whenever a user moves the mouse within the application window or when [[SDL_WarpMouseInWindow]]() is called. 
 
-'''state''' is an 8-bit button bitmask of the current button state and is the same as that returned by [[SDL_GetMouseState]]().  You can test different buttons by using the following masks:
+'''state''' is a 32-bit button bitmask of the current button state and is the same as that returned by [[SDL_GetMouseState]]().  You can test different buttons by using the following masks:
 {|
 |SDL_BUTTON_LMASK
 |-
