--- a/SDL_JoyAxisEvent.mediawiki
+++ b/SDL_JoyAxisEvent.mediawiki
@@ -11,7 +11,7 @@ A structure that contains joystick axis motion event information.
 |'''type'''
 |SDL_JOYAXISMOTION
 |-
-|Uint8
+|SDL_JoystickID
 |'''which'''
 |the index of the joystick that reported the event
 |-
@@ -19,7 +19,7 @@ A structure that contains joystick axis motion event information.
 |'''axis'''
 |the index of the axis that changed
 |-
-|int
+|Sint16
 |'''value'''
 |the current position of the axis (range: -32768 to 32767)
 |}
