--- a/SDL_JoyBallEvent.mediawiki
+++ b/SDL_JoyBallEvent.mediawiki
@@ -11,7 +11,7 @@ A structure that contains joystick trackball motion event information.
 |'''type'''
 |SDL_JOYBALLMOTION
 |-
-|Uint8
+|SDL_JoystickID
 |'''which'''
 |the index of the joystick that reported the event
 |-
@@ -19,11 +19,11 @@ A structure that contains joystick trackball motion event information.
 |'''ball'''
 |the index of the trackball that changed
 |-
-|int
+|Sint16
 |'''xrel'''
 |the relative motion in the X direction
 |-
-|int
+|Sint16
 |'''yrel'''
 |the relative motion in the Y direction
 |}
