--- a/SDL_JoyButtonEvent.mediawiki
+++ b/SDL_JoyButtonEvent.mediawiki
@@ -11,7 +11,7 @@ A structure that contains joystick button event information.
 |'''type'''
 |the event type; SDL_JOYBUTTONDOWN or SDL_JOYBUTTONUP
 |-
-|Uint8
+|SDL_JoystickID
 |'''which'''
 |the index of the joystick that reported the event
 |-
