--- a/SDL_MouseButtonEvent.mediawiki
+++ b/SDL_MouseButtonEvent.mediawiki
@@ -27,11 +27,11 @@ A structure that contains mouse button event information.
 |'''state'''
 |the state of the button; SDL_PRESSED or SDL_RELEASED
 |-
-|int
+|Sint32
 |'''x'''
 |X coordinate, relative to window
 |-
-|int
+|Sint32
 |'''y'''
 |Y coordinate, relative to window
 |}
