--- a/SDL_MouseWheelEvent.mediawiki
+++ b/SDL_MouseWheelEvent.mediawiki
@@ -20,11 +20,11 @@ A structure that contains mouse wheel event information.
 |'''which'''
 |the mouse instance id, or SDL_TOUCH_MOUSEID; see [[#Remarks|Remarks]] for details
 |-
-|int
+|Sint32
 |'''x'''
 |the amount scrolled horizontally
 |-
-|int
+|Sint32
 |'''y'''
 |the amount scrolled vertically
 |}
