--- a/FAQGeneral.mediawiki
+++ b/FAQGeneral.mediawiki
@@ -7,7 +7,7 @@
 Very simply, Simple DirectMedia Layer, or SDL for short, is a library that allows you low level access to a video framebuffer, audio output, mouse, keyboard, and joysticks across a wide variety of operating systems. 
 
 == What platforms are supported? ==
-The current version supports Windows XP, Vista, and 7, MacOS X 10.4+, Linux 2.6+, iOS 3.1.3+, and Android 1.6+.  SDL 2.0 includes code for other operating systems but they are not officially supported.  See [http://hg.libsdl.org/SDL/file/default/README.Platforms] for the most recent list.
+The current version supports Windows XP, Vista, and 7, MacOS X 10.4+, Linux 2.6+, iOS 3.1.3+, and Android 1.6+.  SDL 2.0 includes code for other operating systems but they are not officially supported.  See [http://hg.libsdl.org/SDL/file/default/README-platforms.txt] for the most recent list.
 
 == What is the latest version? ==
 The latest stable version is 1.2 You can always get the very latest bleeding edge Subversion snapshot, which may be broken at any given time, from the Subversion page.
