--- a/FAQiOS.mediawiki
+++ b/FAQiOS.mediawiki
@@ -6,7 +6,7 @@
 ==== What is supported? ====
 SDL supports iOS 3.1.3 or newer.
 
-For the latest information see http://hg.libsdl.org/SDL/file/default/README.Platforms
+For the latest information see http://hg.libsdl.org/SDL/file/default/README-platforms.txt
 
 == Developing with SDL ==
 === General ===
