--- a/MigrationGuide.mediawiki
+++ b/MigrationGuide.mediawiki
@@ -46,7 +46,7 @@ Instead of passing around a pointer to the current screen everywhere in your cod
 
 You update the physical screen using [[SDL_RenderPresent]], which replaces ```SDL_Flip``` and {{{SDL_UpdateRects}}}.
 
-```SDL_SetVideoMode``` from 1.2 is now just a compatibility function, you will not use it anymore.  You can use [[SDL_GetWindowSurface]] to get a 1.2 style surface for a window if necessary.
+```SDL_SetVideoMode``` from 1.2 was just a compatibility function in 1.3, you will not use it anymore. It is no more available in 2.0.  You can use [[SDL_GetWindowSurface]] to get a 1.2 style surface for a window if necessary.
 
 === Alpha-blending ===
 
