--- a/Tutorials-TextInput.mediawiki
+++ b/Tutorials-TextInput.mediawiki
@@ -56,7 +56,7 @@ First, an example:
 
 === Example ===
 ```#!cplusplus
-int main()
+int main(int argc, char *argv[])
 {
     InitVideo();
     /* ... */
