--- a/SDL_RenderCopy.mediawiki
+++ b/SDL_RenderCopy.mediawiki
@@ -36,7 +36,7 @@ Returns 0 on success or a negative error code on failure; call [[SDL_GetError]](
 #include <SDL/SDL.h>
 #define SHAPE_SIZE 16
 
-int main()
+int main(int argc, char *argv[])
 {
   SDL_Window* Main_Window;
   SDL_Renderer* Main_Renderer;
