--- a/SDL_RWtell.mediawiki
+++ b/SDL_RWtell.mediawiki
@@ -34,7 +34,7 @@ The old wiki says this has only 1 param - ctx - but both the old wiki and header
 #include <stdio.h>
 #include "SDL_rwops.h"
 
-int main()
+int main(int argc, char *argv[])
 {
   SDL_RWops *rw=SDL_RWFromFile("test.bin","r");
   if(rw==NULL)
