--- a/SDL_CreateRenderer.mediawiki
+++ b/SDL_CreateRenderer.mediawiki
@@ -31,7 +31,7 @@ Returns a valid rendering context or NULL if there was an error; call [[SDL_GetE
 ```c++
 #include <SDL/SDL.h>
 
-int main() {
+int main(int argc, char *argv[]) {
 	SDL_Window *win = NULL;
 	SDL_Renderer *renderer = NULL;
 	SDL_Texture *bitmapTex = NULL;
