Updated types to match SDL_events.h.

--- a/SDL_WindowEvent.mediawiki
+++ b/SDL_WindowEvent.mediawiki
@@ -19,11 +19,11 @@ A structure that contains window state change event data.
 |'''event'''
 |[[SDL_WindowEventID]]
 |-
-|int
+|Sint32
 |'''data1'''
 |event dependent data
 |-
-|int
+|Sint32
 |'''data2'''
 |event dependent data
 |}
