Updated types to match SDL_events.h.

--- a/SDL_JoyHatEvent.mediawiki
+++ b/SDL_JoyHatEvent.mediawiki
@@ -11,7 +11,7 @@ A structure that contains joystick hat position change event information.
 |'''type'''
 |SDL_JOYHATMOTION
 |-
-|Uint8
+|SDL_JoystickID
 |'''which'''
 |the index of the joystick that reported the event
 |-
