Updated types to match SDL_events.h.

--- a/SDL_UserEvent.mediawiki
+++ b/SDL_UserEvent.mediawiki
@@ -16,7 +16,7 @@ A structure that contains a user-defined event type (event.user.*).
 |'''windowID'''
 |the associated window, if any
 |-
-|int
+|Sint32
 |'''code'''
 |user defined event code
 |-
