--- a/ToDo.mediawiki
+++ b/ToDo.mediawiki
@@ -129,3 +129,9 @@ SDL_events.h
 * [[SDL_ControllerAxisEvent]]
 * [[SDL_ControllerButtonEvent]]
 * [[SDL_ControllerDeviceEvent]]
+
+=== Old structures ===
+
+SDL_events.h
+
+* [[SDL_TouchButtonEvent]] (not part of SDL 2.0)
