--- a/SDL_RenderFillRect.mediawiki
+++ b/SDL_RenderFillRect.mediawiki
@@ -32,6 +32,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
+:[[SDL_SetRenderDrawColor]]
 :[[SDL_RenderDrawLine]]
 :[[SDL_RenderDrawLines]]
 :[[SDL_RenderDrawPoint]]
