Updated return types to match SDL_keyboard.h.

--- a/SDL_GetKeyboardState.mediawiki
+++ b/SDL_GetKeyboardState.mediawiki
@@ -8,7 +8,7 @@ Use this function to get a snapshot of the current state of the keyboard.
 
 == Syntax ==
 ```c++
-Uint8* SDL_GetKeyboardState(int* numkeys)
+const Uint8* SDL_GetKeyboardState(int* numkeys)
 ```
 
 == Function Parameters ==
@@ -23,7 +23,7 @@ Returns ^a pointer to^ an array of key states. *A value of 1 means that the key 
 == Code Examples ==
 <<Color2(green,Is this entered correctly? Does the \code and \endcode go in or is that doxygen markup in the header?  There is a different example in the old wiki.)>>
 ```c++
-Uint8 *state = SDL_GetKeyboardState(NULL);
+const Uint8 *state = SDL_GetKeyboardState(NULL);
 if ( state[SDL_SCANCODE_RETURN] ) {
     printf("<RETURN> is pressed.\n");
 }
