Add SDL_SetWindowMaximumSize as related function

--- a/SDL_SetWindowMinimumSize.mediawiki
+++ b/SDL_SetWindowMinimumSize.mediawiki
@@ -44,6 +44,7 @@ You can add your code example here
 
 == Related Functions ==
 :[[SDL_GetWindowMinimumSize]]
+:[[SDL_SetWindowMaximumSize]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
