--- a/CategoryInit.mediawiki
+++ b/CategoryInit.mediawiki
@@ -2,38 +2,36 @@
 <!-- #master-date:Unknown-Date -->
 <!-- format wiki -->
 <!-- language en -->
-
 = Initialization and Shutdown =
-
 '''Include File(s):''' [http://hg.libsdl.org/SDL/file/default/include/SDL.h SDL.h]
 
 
 == Introduction ==
-
-Functions in this category are used to set up SDL for use and generally have global effects in your program.
+The functions in this category are used to set up SDL for use and generally have global effects in your program.
 
 === Introduction to Initialization ===
+To begin using SDL in your program [[SDL_Init]]() must be called before most other SDL functions.  The role of [[SDL_Init]]() is to properly initialize the SDL library and start each of the various subsystems requested as part of the call.
 
-To begin using SDL in your program [[SDL_Init]]() must be called to initialize subsystems and enable use of other SDL functions. 
- {i} The [[CategoryEvents|Event Handling]], [[CategoryIO|File I/O]], and [[CategoryThread|Threading]] subsystems are initialized by default.  To initialize other subsystems you must specifically call them.  Multiple subsystems may be OR'd together. 
+: {i} The [[CategoryEvents|Event Handling]], [[CategoryIO|File I/O]], and [[CategoryThread|Threading]] subsystems are initialized by default.  To initialize other subsystems you must specifically call them.  Multiple subsystems may be OR'd together.
 : ''Example:''
 : ```
 SDL_Init(SDL_INIT_VIDEO|SDL_INIT_AUDIO);
 ```
-: Initializes the 3 default subsystems plus the [[CategoryVideo|Video]] and [[CategoryAudio|Audio]] subsystems.
+: This initializes the 3 default subsystems plus the [[CategoryVideo|Video]] and [[CategoryAudio|Audio]] subsystems.
+:
+
+It should be noted that on some operating systems, [[SDL_Init]]() will fail if [[SDL_main]]() has not been defined as the entry point for the program.  Calling [[SDL_SetMainReady]]() prior to [[SDL_Init]]() will circumvent this faliure condition, however, users should be careful when calling [[SDL_|SDL_SetMainReady]]() as improper initalization may cause crashes and hard to diagnose problems.
 
 === Introduction to Shut Down ===
+[[SDL_Quit]]() should be called before an SDL application exits to safely shut down all subsystems, including the default ones.
 
-[[SDL_Quit]]() should be called before an SDL application exits to shut down all subsystems, including the default ones.
-* It is not necessary to specify individual subsystems when using [[SDL_Quit]]().  It will automatically shut down all active subsystems. 
+* It is not necessary to specify individual subsystems when using [[SDL_Quit]]() as it will automatically shut down all active subsystems.
 
 <!-- #Remove this line and the ## in front of the following if they become relevant to this category to activate them. -->
 <!-- #== Enumerations == -->
 <!-- #<<FullSearchCached(category:CategoryEnum CategoryInit -SGEnumerations)>> -->
-
 <!-- #== Structures == -->
 <!-- #<<FullSearchCached(category:CategoryStruct CategoryInit -SGStructures)>> -->
-
 == Functions ==
 <<FullSearchCached(category:CategoryInit -CategoryEnum -CategoryStruct -SGFunctions)>>
 
