--- a/SDL_Init.mediawiki
+++ b/SDL_Init.mediawiki
@@ -139,6 +139,7 @@ If you want to initialize subsystems separately you would call [[SDL_Init]](0) f
 :[[SDL_InitSubSystem]] 
 :[[SDL_Quit]] 
 :[[SDL_WasInit]] 
+:[[SDL_SetMainReady]] 
 
 ----
 [[CategoryAPI]], [[CategoryInit]]
