--- a/SDL_GL_CreateContext.mediawiki
+++ b/SDL_GL_CreateContext.mediawiki
@@ -20,8 +20,8 @@ Returns the OpenGL context associated with '''window''' or NULL on error; call [
 
 == Code Examples ==
 ```c++
-#include <SDL2/SDL.h>
-#include <SDL2/SDL_opengl.h>
+#include "SDL.h"
+#include "SDL_opengl.h"
 
 int main(int argc, char* argv[]){
 
