--- a/SDL_CreateWindow.mediawiki
+++ b/SDL_CreateWindow.mediawiki
@@ -45,7 +45,7 @@ Returns the window that was created or NULL on failure; call [[SDL_GetError]]() 
 // Example program:
 // Using SDL2 to create an application window
 
-#include <SDL2/SDL.h>
+#include "SDL.h"
 #include <iostream>
 
 int main(int argc, char* argv[]){
