Changed example to be more compatible with C (was C++).

--- a/SDL_GetCurrentDisplayMode.mediawiki
+++ b/SDL_GetCurrentDisplayMode.mediawiki
@@ -29,29 +29,29 @@ Returns 0 on success or a negative error code on failure; call [[SDL_GetError]](
 // Using SDL2's SDL_GetCurrentDisplayMode()
 
 #include "SDL.h"
-#include <iostream>   
-
-using namespace std;
+#include <stdio.h>
 
 int main(int argc, char* argv[]){
 
-  SDL_Init(SDL_INIT_VIDEO); 
-  
+  int i;
+
   // Declare display mode structure to be filled in.
   SDL_DisplayMode current;
 
+  SDL_Init(SDL_INIT_VIDEO); 
+
   // Get current display mode of all displays.
-  for(int i=0; i < SDL_GetNumVideoDisplays(); ++i){
+  for(i = 0; i < SDL_GetNumVideoDisplays(); ++i){
   
     int should_be_zero = SDL_GetCurrentDisplayMode(i, &current);
-    
+
     if(should_be_zero != 0)
       // In case of error...
-      cout << "Could not get display mode for video display #" << i << ": " << SDL_GetError();
+      printf("Could not get display mode for video display #%d: %s", i, SDL_GetError());
     
     else 
       // On success, print the current display mode.
-      cout << "Display #" << i << ": current display mode is " << current.w << 'x' << current.h << "px @ " << current.refresh_rate << "hz. \n";
+      printf("Display #%d: current display mode is %dx%dpx @ %dhz. \n", i, current.w, current.h, current.refresh_rate);
 
   }
  
