--- a/SDL_Init.mediawiki
+++ b/SDL_Init.mediawiki
@@ -124,6 +124,12 @@ The [[CategoryEvents|Event Handling]], [[CategoryIO|File I/O]], and [[CategoryTh
 |'''SDL_INIT_HAPTIC'''
 |haptic (force feedback) subsystem
 |-
+|'''SDL_INIT_GAMECONTROLLER'''
+|controller subsystem
+|-
+|'''SDL_INIT_EVENTS'''
+|events subsystem
+|-
 |'''SDL_INIT_EVERYTHING'''
 |all of the above subsystems
 |-
