--- a/FAQDevelopment.mediawiki
+++ b/FAQDevelopment.mediawiki
@@ -23,11 +23,11 @@ The BMP and WAV file loaders included with SDL are simple examples demonstrating
 == Does SDL have text drawing support? ==
 Games and operating systems vary widely in the type and availability of text drawing facilities. Instead of trying to deal with this in the core SDL library, there are several text drawing libraries designed for use with SDL on the SDL libraries page. Common techniques include using bitmap fonts, truetype fonts, and custom images for text.
 
-== What kind of GUI's are there for SDL? ==
+== What kind of GUIs are there for SDL? ==
 There are several GUI libraries available from the SDL libraries page.
 There is also a demo on the SDL demos page of using GTk natively with SDL, which works really well for graphics output.
 Also on the demos page is a hack written by Kent Mein using Tcl/Tk with SDL.
-You may also be able to get other GUI's to work with SDL. Many of them have documentation on how to get the toolkits to work with other applications.
+You may also be able to get other GUIs to work with SDL. Many of them have documentation on how to get the toolkits to work with other applications.
 
 == Do I #include <SDL.h> or <SDL/SDL.h>? ==
 The most portable way to include SDL headers is to use quotes around the header name:
@@ -42,7 +42,7 @@ You need to turn on the "enums as ints" option for your compiler:
 * For Apple's MPW environment, add this command line option: -enum int
 * For CodeWarrior, go to the C/C++ Language settings menu for your project and check the "Enums Always Int" box.
 
-== I have an accelerated video card, but SDL tells me that that I have zero video memory and no acceleration!
+== I have an accelerated video card, but SDL tells me that that I have zero video memory and no acceleration! ==
 Not all display targets can make use of hardware acceleration. In particular, this is the case for the X11 target which always presents you with a software framebuffer. Your video memory will always be reported to be zero if no acceleration is available.
 Note that this has nothing to do with 3D acceleration, just 2D hardware acceleration support in the underlying operating system video drivers.
 
