Changed return value from long to Sint64 to match the headers (thanks Ludovic!).

--- a/SDL_RWtell.mediawiki
+++ b/SDL_RWtell.mediawiki
@@ -11,7 +11,7 @@ Use this function to perform a do-nothing seek to get the current offset in an S
 
 == Syntax ==
 ```c++
-long SDL_RWtell(struct SDL_RWops* context)
+Sint64 SDL_RWtell(struct SDL_RWops* context)
 ```
 
 ```{#!wiki comment
