--- a/SDL_RWtell.mediawiki
+++ b/SDL_RWtell.mediawiki
@@ -14,14 +14,10 @@ Use this function to perform a do-nothing seek to get the current offset in an S
 Sint64 SDL_RWtell(struct SDL_RWops* context)
 ```
 
-```{#!wiki comment
-The old wiki says this has only 1 param - ctx - but both the old wiki and header also list the following {{{(ctx)->seek(ctx, 0, RW_SEEK_CUR)``` which appears to specify 3 params.  Does the SDL_RWtell macro call the seek function of the SDL_RWops struct then use the given '''context''' + an '''offset''' of 0  + '''whence''' of RW_SEEK_CUR as the settings to find the current location in the data?  I don't know how to properly represent that here.  See purple below for my attempt.
-}}}}
-
 == Function Parameters ==
 {|
 |'''context''' 
-|a data stream containing the tell function ??? 
+|a SDL_RWops data stream object from which to get the current offset
 |}
 
 == Return Value ==
@@ -54,9 +50,6 @@ int main(int argc, char *argv[])
 == Remarks ==
 *<br/>This is not a built-in function. This is a macro that calls whatever seek function that happens to be pointed to in an SDL_RWops structure.<br/>*
 
-```#!wiki comment
-<<Color2(purple,[[SDL_RWtell]] calls the seek function in the SDL_RWops struct which uses the specified '''context''' pointer)>><<Color2(purple, ,, an '''offset''' of 0)>><<Color2(purple,, , and a '''whence''' of RW_SEEK_CUR to find the current location in the data.)>>
-```
 == Related Functions ==
 : [[SDL_RWclose]] (Macro) *
 : [[SDL_RWFromFile]] *
