--- a/SDL_CreateWindow.mediawiki
+++ b/SDL_CreateWindow.mediawiki
@@ -91,6 +91,8 @@ int main(int argc, char* argv[]){
 {|
 |SDL_WINDOW_FULLSCREEN
 |-
+|SDL_WINDOW_FULLSCREEN_DESKTOP
+|-
 |SDL_WINDOW_OPENGL
 |-
 |SDL_WINDOW_SHOWN
