--- a/SDL_Quit.mediawiki
+++ b/SDL_Quit.mediawiki
@@ -12,20 +12,9 @@ void SDL_Quit(void)
 
 == Code Examples ==
 ```c++
-You can add your code example here
-```
-
-== Remarks ==
-You should call this function even if you have already shutdown each initialized subsystem with [[SDL_QuitSubSystem]]().
-
-If you start a subsystem using a call to that subsystem's init function (for example [[SDL_VideoInit]]()) instead of [[SDL_Init]]() or [[SDL_InitSubSystem]](), then you must use that subsystem's quit function ([[SDL_VideoQuit]]()) to shut it down before calling SDL_Quit().
-
-You can use this function with atexit() to ensure that it is run when your application is shutdown, but it is not wise to do this from a library or other dynamically loaded code. 
-
-== Examples ==
-```c++
 #include "SDL.h"
 #include <stdio.h>
+#include <stdlib.h>
 
 int main(int argc, char** argv) {
     if (SDL_Init(SDL_INIT_EVERYTHING) != 0) {
@@ -39,6 +28,13 @@ int main(int argc, char** argv) {
     return 0;
 }
 ```
+
+== Remarks ==
+You should call this function even if you have already shutdown each initialized subsystem with [[SDL_QuitSubSystem]]().
+
+If you start a subsystem using a call to that subsystem's init function (for example [[SDL_VideoInit]]()) instead of [[SDL_Init]]() or [[SDL_InitSubSystem]](), then you must use that subsystem's quit function ([[SDL_VideoQuit]]()) to shut it down before calling SDL_Quit().
+
+You can use this function with atexit() to ensure that it is run when your application is shutdown, but it is not wise to do this from a library or other dynamically loaded code. 
 
 == Related Functions ==
 :[[SDL_Init]]
